# 2024-fastapi-lambda-serverless

./: .gitignore  README.md
backend/: Dockerfile.local  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8cc113235c77_create_initial_table.py
backend/app/: config.py  database.py  main.py  requirements.txt
backend/app/models/: user.py
infra/: cdk.context.json  cdk.json  docker-compose.yml  package-lock.json  package.json  tsconfig.json
infra/src/env/: local.ts  stg.ts
infra/src/lib/: appStack.ts  certStack.ts  configType.ts  localStack.ts
infra/src/lib/constructs/: backendApi.ts  network.ts
