[project]
name = "2024-fastapi-lambda-serverless"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"

#本番で使用するライブラリ
dependencies = [
  "fastapi >= 0.110.0",
  "uvicorn >= 0.28.0",
  "sqlalchemy >= 2.0.36", 
  "psycopg2-binary >= 2.9.0",
  "alembic == 1.14.0",
  "mangum >= 0.19.0"
]

#開発時のみ使うライブラリ
[tool.uv]
dev-dependencies = [
  "debugpy >= 1.6.6",
  "ruff >= 0.0.287",
  "pytest >= 8.0.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "C4",
  "UP",
]

ignore = [
    "E501",  
    "B008",
    "C901",
    "W191",
    "B904",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# 
[tool.setuptools]
packages = ["app"]
